--- a/styles.css
+++ b/styles.css
@@ -110,4 +110,9 @@ body {
 
 .img-container:hover::before {
   opacity: 0.5;
+}
+
+a {
+  text-decoration: none;
+  color: white;
 }/*# sourceMappingURL=styles.css.map */
